--- a/src/Makefile.gtest.include
+++ b/src/Makefile.gtest.include
@@ -38,6 +38,7 @@ zcash_gtest_SOURCES += \
 	gtest/test_txid.cpp \
 	gtest/test_libzcash_utils.cpp \
 	gtest/test_proofs.cpp \
+	gtest/test_paymentdisclosure.cpp \
 	gtest/test_checkblock.cpp
 if ENABLE_WALLET
 zcash_gtest_SOURCES += \
